tests/rosetta/transpiler/Clojure/ackermann-function.error
run error: exit status 1
Execution error (ExceptionInfo) at main/ackermann (ackermann-function.clj:10).
return

Full report at:
/tmp/clojure-15537563104108660499.edn
